internal/gatewayapi/testdata/xds/httproute-with-non-matching-specific-hostname-attaching-to-gateway-with-wildcard-hostname.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.envoyproxy.io"
      allowedRoutes:
        namespaces:
          from: All
  status:
    listeners:
    - name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      attachedRoutes: 0
      conditions:
      - type: Ready
        status: "True"
        reason: Ready
        message: Listener is ready
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
    hostnames:
    - whales.kubernetes.io
    rules:
    - matches:
      - path:
          value: "/"
      backendRefs:
      - name: service-1
        port: 8080
  status:
    parents:
    - parentRef:
        namespace: envoy-gateway
        name: gateway-1
      # controllerName: envoyproxy.io/gateway-controller
      conditions:
      - type: Accepted
        status: "False"
        reason: NoMatchingListenerHostname
        message: There were no hostname intersections between the HTTPRoute and this parent ref's Listener(s).
xdsIR:
  http:
  - name: envoy-gateway-gateway-1-http
    address: 0.0.0.0
    port: 10080
    hostnames:
    - "*.envoyproxy.io"
